--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: Empirical Asset Pricing
 Version: 0.1.0
 Author: Emanuele Guidotti
 Maintainer: Emanuele Guidotti <emanuele.guidotti@unine.ch>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: A collection of tools I use in my own research.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
