--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(fm)
 export(fm2fig)
 export(fm2tex)
 export(kalman)
+export(mape)
 export(ntile)
+export(rmse)
 export(winsorize)
 import(ggplot2)
