--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ S3method(as.Date,integer)
 export(dbExport)
 export(dbInit)
 export(fm)
-export(fm2fig)
-export(fm2tex)
+export(fm2ggplot)
+export(fm2texreg)
 export(kalman)
 export(mape)
 export(ntile)
