--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,11 @@ S3method(as.Date,integer)
 export(dbCreateIndex)
 export(dbExport)
 export(dbInit)
+export(factorEMC)
+export(factorHML)
+export(factorIML)
+export(factorMKT)
+export(factorSMB)
 export(fm)
 export(fm2ggplot)
 export(fm2texreg)
