--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: eap
+Package: eguidotti
 Type: Package
-Title: Empirical Asset Pricing
-Version: 0.2.1
+Title: Guidotti Miscellaneous
+Version: 0.1.0
 Author: Emanuele Guidotti
 Maintainer: Emanuele Guidotti <emanuele.guidotti@unine.ch>
-Description: A collection of tools I use in my own research.
+Description: A collection of tools I use for my own research.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
