--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(fm2ggplot)
 export(fm2texreg)
 export(mape)
 export(ntile)
+export(printbold)
 export(readFile)
 export(rmse)
 export(swrite)
