--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends:
-    data.table
+    data.table,
+    xtable
 Imports: 
     DBI,
-    xtable,
     texreg,
     ggplot2
