--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends:
-    data.table,
-    xtable
+    xtable,
+    data.table
 Imports: 
     DBI,
     texreg,
