--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,13 @@ export(fm2ggplot)
 export(fm2texreg)
 export(mape)
 export(ntile)
-export(printbold)
 export(readFile)
 export(rmse)
 export(swrite)
 export(texreg)
+export(textab)
 export(winsorize)
+import(DBI)
+import(data.table)
 import(ggplot2)
+import(xtable)
